<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Hike Palace</string>
    <string name="txt_home">Home</string>
    <string name="txt_search">Search</string>
    <string name="txt_places_list">Places List</string>
    <string name="txt_account">Account</string>
    <string name="txt_more"><![CDATA[More >>]]></string>
    <string name="txt_place_description">Place Description</string>
    <string name="txt_mountains_list">Mountains List</string>
    <string name="txt_name">Mount %s</string>
    <string name="txt_suggested">Suggested by %s people</string>
    <string name="txt_words_from_hikers">Words from Hikers</string>
    <string name="txt_discover_places">Discover Places</string>
    <string name="txt_search_places">Search Places</string>
    <string name="txt_find_a_good_place_to_hike">Find a good place to hike</string>
    <string name="txt_search_mountains">Search mountains</string>
    <string name="txt_login_info">Login Info</string>
    <string name="txt_help">Help</string>
    <string name="txt_legal_information">Legal Information</string>
    <string name="txt_log_out">Log Out</string>
    <string name="txt_profile_picture">Profile Picture</string>
    <string name="txt_welcome">Welcome to %s</string>
    <string-array name="list_location">
        <item>East Java</item>
        <item>East Java</item>
        <item>Central Java</item>
        <item>West Nusa Tenggara</item>
        <item>East Java</item>
        <item>East Nusa Tenggara</item>
        <item>West Java</item>
        <item>West Sumatra</item>
        <item>Papua</item>
        <item>West Java</item>
    </string-array>
</resources>