<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_marginBottom="32dp">

        <TextView
            android:id="@+id/search_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="34dp"
            android:text="@string/txt_search_places"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/search_txt_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/txt_find_a_good_place_to_hike"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/search_txt"
            app:layout_constraintTop_toBottomOf="@id/search_txt" />

        <EditText
            android:hint="@string/txt_search_mountains"
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/bg_search_text"
            android:drawableEnd="@drawable/ic_search"
            android:elevation="4dp"
            android:inputType="text"
            android:padding="18dp"
            app:layout_constraintStart_toStartOf="@id/search_txt_1"
            app:layout_constraintTop_toBottomOf="@id/search_txt_1"
            android:importantForAutofill="no" />



        <androidx.cardview.widget.CardView
            android:id="@+id/cv_srch_1"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="32dp"
            android:layout_marginTop="34dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_search">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/bromo"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="@id/cv_srch_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cv_srch_1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/gede"
                android:contentDescription="TODO" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_srch_3"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="34dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="4dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_srch_1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/kerinci"
                android:contentDescription="TODO" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="@id/cv_srch_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cv_srch_3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/kelimutu"
                android:contentDescription="TODO" />

        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>